--- a/in_app_purchases/codelab_rebuild.yaml
+++ b/in_app_purchases/codelab_rebuild.yaml
@@ -26,6 +26,21 @@ steps:
           +GoogleService-Info.plist
           +google-services.json
           +ios/firebase_app_id_file.json
+      - name: Add .gemini directory
+        mkdir: steps/app/.gemini
+      - name: Add .gemini/settings.json
+        path: steps/app/.gemini/settings.json
+        replace-contents: |
+          {
+              "mcpServers": {
+                  "dart": {
+                      "command": "dart",
+                      "args": [
+                          "mcp-server"
+                      ]
+                  }
+              }
+          }
       - name: Add app dependencies
         path: steps/app
         flutter: pub add cloud_firestore cupertino_icons firebase_auth firebase_core google_sign_in http intl provider
@@ -16657,6 +16672,21 @@ steps:
         renamedir:
           from: steps/firebase_backend_dart
           to: steps/dart-backend
+      - name: Add .gemini directory
+        mkdir: steps/dart-backend/.gemini
+      - name: Add .gemini/settings.json
+        path: steps/dart-backend/.gemini/settings.json
+        replace-contents: |
+          {
+              "mcpServers": {
+                  "dart": {
+                      "command": "dart",
+                      "args": [
+                          "mcp-server"
+                      ]
+                  }
+              }
+          }
       - name: Add dependencies
         path: steps/dart-backend
         dart: pub add googleapis googleapis_auth http app_store_server_sdk
