--- a/intro_flutter_gpu/codelab_rebuild.yaml
+++ b/intro_flutter_gpu/codelab_rebuild.yaml
@@ -15,6 +15,21 @@ steps:
           include: ../../analysis_options.yaml
       - name: Remove README
         rm: intro_flutter_gpu/README.md
+      - name: Add .gemini directory
+        mkdir: intro_flutter_gpu/.gemini
+      - name: Add .gemini/settings.json
+        path: intro_flutter_gpu/.gemini/settings.json
+        replace-contents: |
+          {
+              "mcpServers": {
+                  "dart": {
+                      "command": "dart",
+                      "args": [
+                          "mcp-server"
+                      ]
+                  }
+              }
+          }
       - name: Add .vscode directory
         mkdir: intro_flutter_gpu/.vscode
       - name: Add .vscode/launch.json
@@ -274,7 +289,7 @@ steps:
             testWidgets('smoke test', (tester) async {
               // Build our app and trigger a frame.
               await tester.pumpWidget(const MainApp());
-            }, skip: true);
+            }, skip: true); // See https://github.com/flutter/flutter/issues/171361
           }
       - name: Patch macos/Runner/Info.plist
         path: intro_flutter_gpu/macos/Runner/Info.plist
@@ -2218,7 +2233,7 @@ steps:
           +    await tester.pumpWidget(
           +      MainApp(staticResourcesInitialized: Scene.initializeStaticResources()),
           +    );
-             }, skip: true);
+             }, skip: true); // See https://github.com/flutter/flutter/issues/171361
            }
       - name: Copy step_12
         copydir:
