--- a/tfagents-flutter/codelab_rebuild.yaml
+++ b/tfagents-flutter/codelab_rebuild.yaml
@@ -9,6 +9,21 @@ steps:
       - name: Add deps
         path: frontend
         flutter: pub add http
+      - name: Add .gemini directory
+        mkdir: frontend/.gemini
+      - name: Add .gemini/settings.json
+        path: frontend/.gemini/settings.json
+        replace-contents: |
+          {
+              "mcpServers": {
+                  "dart": {
+                      "command": "dart",
+                      "args": [
+                          "mcp-server"
+                      ]
+                  }
+              }
+          }
       - name: Strip DEVELOPMENT_TEAM
         strip-lines-containing: DEVELOPMENT_TEAM =
         path: frontend/ios/Runner.xcodeproj/project.pbxproj
