--- a/intro_flutter_gpu/codelab_rebuild.yaml
+++ b/intro_flutter_gpu/codelab_rebuild.yaml
@@ -274,7 +274,7 @@ steps:
             testWidgets('smoke test', (tester) async {
               // Build our app and trigger a frame.
               await tester.pumpWidget(const MainApp());
-            });
+            }, skip: true); // https://github.com/flutter/flutter/issues/173650
           }
       - name: Patch macos/Runner/Info.plist
         path: intro_flutter_gpu/macos/Runner/Info.plist
@@ -2249,7 +2249,7 @@ steps:
           +    await tester.pumpWidget(
           +      MainApp(staticResourcesInitialized: Scene.initializeStaticResources()),
           +    );
-             });
+             }, skip: true); // https://github.com/flutter/flutter/issues/173650
            }
       - name: Copy step_12
         copydir:
