--- a/intro_flutter_gpu/codelab_rebuild.yaml
+++ b/intro_flutter_gpu/codelab_rebuild.yaml
@@ -289,7 +289,7 @@ steps:
             testWidgets('smoke test', (tester) async {
               // Build our app and trigger a frame.
               await tester.pumpWidget(const MainApp());
-            }, skip: true); // See https://github.com/flutter/flutter/issues/171361
+            }, skip: true); // https://github.com/flutter/flutter/issues/173650
           }
       - name: Patch macos/Runner/Info.plist
         path: intro_flutter_gpu/macos/Runner/Info.plist
@@ -300,11 +300,42 @@ steps:
            	<string>MainMenu</string>
            	<key>NSPrincipalClass</key>
            	<string>NSApplication</string>
-          +	<!-- flutter_gpu requires Impeller -->
-          +	<key>FLTEnableImpeller</key>
+          +	<!-- Required for flutter_gpu -->
+          +	<key>FLTEnableFlutterGPU</key>
           +	<true />
            </dict>
            </plist>
+      - name: Patch ios/Runner/Info.plist
+        path: intro_flutter_gpu/ios/Runner/Info.plist
+        patch-u: |
+          --- a/intro_flutter_gpu/step_12/ios/Runner/Info.plist
+          +++ b/intro_flutter_gpu/step_12/ios/Runner/Info.plist
+          @@ -45,5 +45,8 @@
+           	<true/>
+           	<key>UIApplicationSupportsIndirectInputEvents</key>
+           	<true/>
+          +	<!-- Required for flutter_gpu -->
+          +	<key>FLTEnableFlutterGPU</key>
+          +	<true />
+           </dict>
+           </plist>
+      - name: Patch android/app/src/main/AndroidManifest.xml
+        path: intro_flutter_gpu/android/app/src/main/AndroidManifest.xml
+        patch-u: |
+          --- a/intro_flutter_gpu/step_12/android/app/src/main/AndroidManifest.xml
+          +++ b/intro_flutter_gpu/step_12/android/app/src/main/AndroidManifest.xml
+          @@ -3,6 +3,11 @@
+                   android:label="intro_flutter_gpu"
+                   android:name="${applicationName}"
+                   android:icon="@mipmap/ic_launcher">
+          +
+          +        <meta-data
+          +            android:name="io.flutter.embedding.android.EnableFlutterGPU"
+          +            android:value="true" />
+          +
+                   <activity
+                       android:name=".MainActivity"
+                       android:exported="true"
       - name: Copy step_01
         copydir:
           from: intro_flutter_gpu
@@ -2233,7 +2264,7 @@ steps:
           +    await tester.pumpWidget(
           +      MainApp(staticResourcesInitialized: Scene.initializeStaticResources()),
           +    );
-             }, skip: true); // See https://github.com/flutter/flutter/issues/171361
+             }, skip: true); // https://github.com/flutter/flutter/issues/173650
            }
       - name: Copy step_12
         copydir:
