--- a/in_app_purchases/step_11/app/pubspec.yaml
+++ b/in_app_purchases/step_11/app/pubspec.yaml
@@ -4,7 +4,7 @@ publish_to: 'none'
 version: 0.1.0
 
 environment:
-  sdk: ^3.9.0-0
+  sdk: ^3.9.0
 
 dependencies:
   flutter:
@@ -13,17 +13,16 @@ dependencies:
   cupertino_icons: ^1.0.8
   firebase_auth: ^6.0.1
   firebase_core: ^4.0.0
-  google_sign_in: ^6.3.0
+  google_sign_in: ^7.1.1
   http: ^1.5.0
   intl: ^0.20.2
   provider: ^6.1.5
-  in_app_purchase: ^3.2.3
+  logging: ^1.3.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
-  in_app_purchase_platform_interface: ^1.4.0
 
 flutter:
   uses-material-design: true
