--- a/adaptive_app/step_07/pubspec.yaml
+++ b/adaptive_app/step_07/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.9.0-0
+  sdk: ^3.9.0
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -42,8 +42,8 @@ dependencies:
   go_router: ^16.1.0
   split_view: ^3.2.1
   googleapis_auth: ^2.0.0
-  google_sign_in: ^6.3.0
-  extension_google_sign_in_as_googleapis_auth: ^2.0.13
+  google_sign_in: ^7.1.1
+  extension_google_sign_in_as_googleapis_auth: ^3.0.0
 
 dev_dependencies:
   flutter_test:
