--- a/in_app_purchases/step_11/app/pubspec.yaml
+++ b/in_app_purchases/step_11/app/pubspec.yaml
@@ -18,11 +18,13 @@ dependencies:
   intl: ^0.20.2
   provider: ^6.1.5
   logging: ^1.3.0
+  in_app_purchase: ^3.2.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+  in_app_purchase_platform_interface: ^1.4.0
 
 flutter:
   uses-material-design: true
