--- a/adaptive_app/step_07/pubspec.yaml
+++ b/adaptive_app/step_07/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   googleapis_auth: ^2.0.0
   google_sign_in: ^7.1.1
   extension_google_sign_in_as_googleapis_auth: ^3.0.0
+  logging: ^1.3.0
 
 dev_dependencies:
   flutter_test:
