Update `google_sign_in` version (#2339)
Upgrade the version of `google_sign_in`

## Pre-launch Checklist

- [x] I read the [Effective Dart: Style] _recently_, and have followed
its advice.
- [x] I signed the [CLA].
- [x] I updated/added relevant documentation (doc comments with `///`).
- [x] All existing and new tests are passing.

If you need help, consider asking for advice on the #hackers-devrel
channel on [Discord].

<!-- Links -->
[Effective Dart: Style]:
https://dart.dev/guides/language/effective-dart/style
[CLA]: https://cla.developers.google.com/
[Discord]:
https://github.com/flutter/flutter/blob/master/docs/contributing/Chat.md

--- a/adaptive_app/codelab_rebuild.yaml
+++ b/adaptive_app/codelab_rebuild.yaml
@@ -1314,9 +1314,9 @@ steps:
       - name: flutter pub get
         path: adaptive_app
         flutter: pub get
-      - name: Add googleapis_auth google_sign_in extension_google_sign_in_as_googleapis_auth
+      - name: Add googleapis_auth google_sign_in extension_google_sign_in_as_googleapis_auth logging
         path: adaptive_app
-        flutter: pub add googleapis_auth google_sign_in:^6.3.0 extension_google_sign_in_as_googleapis_auth:^2.0.13
+        flutter: pub add googleapis_auth google_sign_in extension_google_sign_in_as_googleapis_auth logging
       - name: Patch .gitignore
         path: adaptive_app/.gitignore
         patch-u: |
@@ -1336,6 +1336,7 @@ steps:
           // Use of this source code is governed by a BSD-style license that can be
           // found in the LICENSE file.
 
+          import 'dart:async';
           import 'dart:io' show Platform;
 
           import 'package:extension_google_sign_in_as_googleapis_auth/extension_google_sign_in_as_googleapis_auth.dart';
@@ -1344,10 +1345,13 @@ steps:
           import 'package:go_router/go_router.dart';
           import 'package:google_sign_in/google_sign_in.dart';
           import 'package:googleapis_auth/auth_io.dart';
+          import 'package:logging/logging.dart';
           import 'package:provider/provider.dart';
           import 'package:url_launcher/link.dart';
 
           import 'app_state.dart';
+
+          final _log = Logger('AdaptiveLogin');
 
           typedef _AdaptiveLoginButtonWidget =
               Widget Function({required VoidCallback? onPressed});
@@ -1395,21 +1399,44 @@ steps:
             @override
             initState() {
               super.initState();
-              _googleSignIn = GoogleSignIn(scopes: widget.scopes);
-              _googleSignIn.onCurrentUserChanged.listen((account) {
-                if (account != null) {
-                  _googleSignIn.authenticatedClient().then((authClient) {
-                    final context = this.context;
-                    if (authClient != null && context.mounted) {
-                      context.read<AuthedUserPlaylists>().authClient = authClient;
-                      context.go('/');
-                    }
-                  });
+              _googleSignIn = GoogleSignIn.instance;
+              _googleSignIn.initialize();
+              _authEventsSubscription = _googleSignIn.authenticationEvents.listen((
+                event,
+              ) async {
+                _log.fine('Google Sign-In authentication event: $event');
+                if (event is GoogleSignInAuthenticationEventSignIn) {
+                  final googleSignInClientAuthorization = await event
+                      .user
+                      .authorizationClient
+                      .authorizationForScopes(widget.scopes);
+                  if (googleSignInClientAuthorization == null) {
+                    _log.warning('Google Sign-In authenticated client creation failed');
+                    return;
+                  }
+                  _log.fine('Google Sign-In authenticated client created');
+                  final context = this.context;
+                  if (context.mounted) {
+                    context.read<AuthedUserPlaylists>().authClient =
+                        googleSignInClientAuthorization.authClient(scopes: widget.scopes);
+                    context.go('/');
+                  }
                 }
               });
+
+              // Check if user is already authenticated
+              _log.fine('Attempting lightweight authentication');
+              _googleSignIn.attemptLightweightAuthentication();
+            }
+
+            @override
+            dispose() {
+              _authEventsSubscription.cancel();
+              super.dispose();
             }
 
             late final GoogleSignIn _googleSignIn;
+            late final StreamSubscription _authEventsSubscription;
 
             @override
             Widget build(BuildContext context) {
@@ -1417,7 +1444,7 @@ steps:
                 body: Center(
                   child: widget.button(
                     onPressed: () {
-                      _googleSignIn.signIn();
+                      _googleSignIn.authenticate();
                     },
                   ),
                 ),
