--- a/in_app_purchases/step_08/app/pubspec.yaml
+++ b/in_app_purchases/step_08/app/pubspec.yaml
@@ -4,7 +4,7 @@ publish_to: 'none'
 version: 0.1.0
 
 environment:
-  sdk: ^3.9.0-0
+  sdk: ^3.9.0
 
 dependencies:
   flutter:
@@ -13,10 +13,11 @@ dependencies:
   cupertino_icons: ^1.0.8
   firebase_auth: ^6.0.1
   firebase_core: ^4.0.0
-  google_sign_in: ^6.3.0
+  google_sign_in: ^7.1.1
   http: ^1.5.0
   intl: ^0.20.2
   provider: ^6.1.5
+  logging: ^1.3.0
   in_app_purchase: ^3.2.3
 
 dev_dependencies:
