--- a/adaptive_app/step_06/pubspec.yaml
+++ b/adaptive_app/step_06/pubspec.yaml
@@ -38,8 +38,8 @@ dependencies:
   http: ^1.5.0
   provider: ^6.1.5
   url_launcher: ^6.3.2
-  flex_color_scheme: ^8.2.1-dev.1
-  go_router: ^16.1.0
+  flex_color_scheme: ^8.3.0
+  go_router: ^16.2.0
   split_view: ^3.2.1
 
 dev_dependencies:
