--- a/firebase-get-to-know-flutter/step_05/pubspec.yaml
+++ b/firebase-get-to-know-flutter/step_05/pubspec.yaml
@@ -36,11 +36,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   google_fonts: ^6.3.0
-  go_router: ^16.1.0
+  go_router: ^16.2.0
   cloud_firestore: ^6.0.0
   firebase_auth: ^6.0.1
   firebase_core: ^4.0.0
-  provider: ^6.1.5
+  provider: ^6.1.5+1
   firebase_ui_auth: ^3.0.0
 
 dev_dependencies:
